--- a/ABCNursing/Web.config
+++ b/ABCNursing/Web.config
@@ -1,71 +1,18 @@
 <?xml version="1.0"?>
+
 <!--
- For more information on how to configure your ASP.NET application, please visit
- http://go.microsoft.com/fwlink/?LinkId=169433
- -->
+  For more information on how to configure your ASP.NET application, please visit
+  http://go.microsoft.com/fwlink/?LinkId=169433
+  -->
+
 <configuration>
- <connectionStrings>
- <add name="ConnectionString" connectionString="Data
-Source=(LocalDB)\MSSQLLocalDB;AttachDBFilename=|DataDirectory|\Database.mdf;Integrated
-Security=True" providerName="System.Data.SqlClient" />
- </connectionStrings>
- <system.web>
- <httpHandlers>
- <add path="Reserved.ReportViewerWebControl.axd" verb="*"
-type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms,
-Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"
- validate="false" />
- </httpHandlers>
- <compilation debug="true" strict="false" explicit="true" targetFramework="4.5">
- <assemblies>
- <add assembly="Microsoft.ReportViewer.WebForms, Version=12.0.0.0,
-Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
- <add assembly="Microsoft.ReportViewer.Common, Version=12.0.0.0, Culture=neutral,
-PublicKeyToken=89845DCD8080CC91" />
- <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral,
-PublicKeyToken=B03F5F7F11D50A3A" />
- </assemblies>
- <buildProviders>
- <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider,
-Microsoft.ReportViewer.WebForms, Version=12.0.0.0, Culture=neutral,
-PublicKeyToken=89845dcd8080cc91" />
- </buildProviders>
- </compilation>
- <httpRuntime targetFramework="4.5" />
- <authentication mode="Forms">
- <forms defaultUrl="~/Default.aspx" loginUrl="~/login.aspx" slidingExpiration="true"
-timeout="2880" />
- </authentication>
- </system.web>
- <!--https://www.codeproject.com/Articles/2905/Role-based-Security-with-FormsAuthentication-->
- <location path="AdminPages">
- <system.web>
- <authorization>
- <!-- Order and case are important below -->
- <allow roles="Admin" />
- <deny users="*" />
- </authorization>
- </system.web>
- </location>
- <location path="MemberPages">
- <system.web>
- <authorization>
- <!-- Order and case are important below -->
- <allow roles="User,Admin" />
- <deny users="*" />
- </authorization>
- </system.web>
- </location>
- <appSettings>
- <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
- </appSettings>
- <system.webServer>
- <validation validateIntegratedModeConfiguration="false" />
- <handlers>
- <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*"
-path="Reserved.ReportViewerWebControl.axd"
-type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms,
-Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
- </handlers>
- </system.webServer>
+    <connectionStrings>
+        <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
+    <system.web>
+      <compilation debug="true" strict="false" explicit="true" targetFramework="4.5.2" />
+      <httpRuntime targetFramework="4.5.2" />
+    </system.web>
+
 </configuration>
