--- a/ABCNursing/Web.config
+++ b/ABCNursing/Web.config
@@ -22,7 +22,29 @@
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5.2"/>
+    <authentication mode="Forms">
+      <forms defaultUrl="~/Default.aspx" loginUrl="~/Login.aspx" slidingExpiration="true"
+     timeout="2880" />
+    </authentication>
   </system.web>
+  <location path="AdminPages">
+    <system.web>
+      <authorization>
+        <!-- Order and case are important below -->
+        <allow roles="Admin" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="MemberPages">
+    <system.web>
+      <authorization>
+        <!-- Order and case are important below -->
+        <allow roles="User,Admin" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
     <handlers>
