--- a/ABCNursing/Web.config
+++ b/ABCNursing/Web.config
@@ -50,4 +50,7 @@
       <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
     </handlers>
   </system.webServer>
+    <appSettings>
+      <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    </appSettings>
 </configuration>
