--- a/ABCNursing/Web.config
+++ b/ABCNursing/Web.config
@@ -23,7 +23,7 @@
     </compilation>
     <httpRuntime targetFramework="4.5.2"/>
     <authentication mode="Forms">
-      <forms defaultUrl="~/Default.aspx" loginUrl="~/Login.aspx" slidingExpiration="true" timeout="2880" />
+      <forms cookieless="UseCookies" defaultUrl="~/Default.aspx" loginUrl="~/Login.aspx" slidingExpiration="true" timeout="2880" />
     </authentication>
   </system.web>
   <location path="AdminPages">
